<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgressSelectorFragment"
    android:orientation="vertical">

    <TextView
        style="@style/Heading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress_header"/>
    <Button
        android:id="@+id/meals_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/daily"
        style="@style/BigButton"
        android:backgroundTint="@color/green_dark"/>

    <Button
        android:id="@+id/progress_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/weekly"
        android:backgroundTint="@color/green_med"
        style="@style/BigButton"/>

</LinearLayout>