<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPhotoFragment"
    android:orientation="vertical">

    <TextView
        style="@style/Heading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Photo"/>

    <Button
        android:id="@+id/captureButton"
        style="@style/BigButton"
        android:layout_weight="0.4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_dark"
        android:text="@string/take_photo"/>

    <Button
        android:id="@+id/photosButton"
        android:layout_weight="0.4"
        style="@style/BigButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_med"
        android:text="@string/pick_photo"/>

    <TextView
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        style="@style/Body1"
        android:text="@string/no_photo"
        android:onClick="onClickMealSummary"/>
</LinearLayout>